testsuite/poke.pkl/struct-method-diag-14.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int foo;

    type Bar =
      struct
      {
        method bar = void:
        {
          foo; /* { dg-error "field.*not in this struct" } */
        }
      };
  };
